# OpenglLearn

project/: CMakeLists.txt
project/cmake/: find3rdParty.cmake  utils.cmake
project/include/jsg/: Shader.h  VertexShader.h  Viewer.h
project/interface/: NodeInterface.h  ShaderInterface.h
project/src/: CMakeLists.txt
project/src/jsg/: CMakeLists.txt  Shader.cpp  VertexShader.cpp  Viewer.cpp
project/src/start/: CMakeLists.txt  firstwindow.cpp  main.cpp  shader.h  triangle.cpp  util.h
shaders/: texture.frag  texture.vert  triangle.frag  triangle.vert
